enabled tomcat8 installation